CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(robolang)

INCLUDE(CheckCCompilerFlag)

CHECK_C_COMPILER_FLAG("-W -Wall" CWARNS)
IF(CWARNS)
	ADD_COMPILE_OPTIONS(-W -Wall)
ENDIF()

CHECK_C_COMPILER_FLAG("-Wno-unused-parameter" CWARNS_E)
IF(CWARNS_E)
	ADD_COMPILE_OPTIONS("-Wno-unused-parameter")
ENDIF()

# Enable debug symbols by default
IF(CMAKE_BUILD_TYPE STREQUAL "")
	SET(CMAKE_BUILD_TYPE Debug)
ENDIF()

FIND_PACKAGE(PkgConfig REQUIRED)

PKG_CHECK_MODULES(GLIB REQUIRED glib-2.0 gobject-2.0 gthread-2.0)
PKG_CHECK_MODULES(GTK REQUIRED gtk+-2.0 gtksourceview-2.0)
PKG_CHECK_MODULES(SDL REQUIRED sdl2 SDL2_image)

ADD_DEFINITIONS(${GLIB_CFLAGS} ${SDL_CFLAGS} ${GTK_CFLAGS})
LINK_DIRECTORIES(${GLIB_LIBRARY_DIRS} ${SDL_LIBRARY_DIRS} ${GTK_LIBRARY_DIRS})

ADD_SUBDIRECTORY(src)

